fix all word wrapping to work better and add image to track table

--- a/src/index.css
+++ b/src/index.css
@@ -42,10 +42,6 @@ code {
   box-shadow: 0px 4px 10px 0px #444;
 }
 
-.word-wrap {
-  word-wrap: break-word;
-}
-
 .space-between {
   justify-content: space-between;
 }
@@ -64,4 +60,16 @@ code {
 
 .justify-end {
   justify-content: flex-end;
+}
+
+.maxw-50-view {
+  max-width: 50vw;
+}
+
+.break-long-words {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-all;
+  word-break: break-word;
+  hyphens: auto;
 }
