--- a/src/modules/playlist-builder/playlist-builder.css
+++ b/src/modules/playlist-builder/playlist-builder.css
@@ -10,3 +10,8 @@
   justify-content: center;
   align-items: center;
 }
+
+.track-table-image {
+  max-height: 2.5rem;
+  width: auto;
+}
